--- a/pom.xml
+++ b/pom.xml
@@ -1,12 +1,13 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-
 	<groupId>org.mynah</groupId>
 	<artifactId>mesh</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 	<name>mesh</name>
 	<url>http://mesh.mynah.org</url>
+	<description>Excel to model utility</description>
+	<inceptionYear>2012</inceptionYear>
 
 	<properties>
 		<finalName>mesh</finalName>
@@ -15,14 +16,58 @@
 		<version.maven-compiler-plugin>2.5.1</version.maven-compiler-plugin>
 		<version.maven-checkstyle-plugin>2.9.1</version.maven-checkstyle-plugin>
 		<version.maven-resources-plugin>2.6</version.maven-resources-plugin>
+		<version.cobertura-maven-plugin>2.5.2</version.cobertura-maven-plugin>
+		<version.maven-javadoc-plugin>2.9</version.maven-javadoc-plugin>
+		<version.maven-license-plugin>1.9.0</version.maven-license-plugin>
 		<!-- Third Party dependencies -->
+		<!-- Logging -->
+		<version.commons-logging>1.1.1</version.commons-logging>
 		<!-- Test -->
 		<version.junit>4.8.2</version.junit>
 		<version.hamcrest>1.1</version.hamcrest>
+		<!-- Files -->
+		<file.license>${basedir}/src/main/resources/etc/header.txt</file.license>
+		<file.checkstyle>${basedir}/src/main/resources/etc/beyondtrack_checks.xml</file.checkstyle>
+		<!-- developers -->
+		<owner.name>Lamb</owner.name>
+		<owner.email>lambgao@me.com</owner.email>
+		<owner.url>http://jinyang.mynah.org</owner.url>
 	</properties>
+
+	<licenses>
+		<license>
+			<name>Apache License, Version 2.0</name>
+			<url>http://www.apache.org/licenses/LICENSE-2.0</url>
+		</license>
+	</licenses>
+
+	<developers>
+		<developer>
+			<id>${owner.email}</id>
+			<name>${owner.name}</name>
+			<email>${owner.email}</email>
+			<url>${owner.url}</url>
+			<roles>
+				<role>Initial Committer</role>
+			</roles>
+			<timezone>+8</timezone>
+		</developer>
+	</developers>
+
+	<issueManagement>
+		<system>GitHub Issues</system>
+		<url>https://github.com/lambgao/mesh/issues</url>
+	</issueManagement>
 
 	<dependencies>
 		<!-- Third Party dependencies -->
+		<!-- Logging -->
+		<dependency>
+			<groupId>commons-logging</groupId>
+			<artifactId>commons-logging</artifactId>
+			<version>${version.commons-logging}</version>
+			<scope>compile</scope>
+		</dependency>
 		<!-- Test -->
 		<dependency>
 			<groupId>junit</groupId>
@@ -75,7 +120,7 @@
 				<inherited>false</inherited>
 				<configuration>
 					<configLocation>src/main/resources/etc/beyondtrack_checks.xml</configLocation>
-					<includeTestSourceDirectory>true</includeTestSourceDirectory>
+					<includeTestSourceDirectory>false</includeTestSourceDirectory>
 					<excludes>
 						<!-- com/**/*.java -->
 					</excludes>
@@ -87,7 +132,43 @@
 					<skip>false</skip>
 				</configuration>
 			</plugin>
-
+			<!-- For license -->
+			<plugin>
+				<groupId>com.mycila.maven-license-plugin</groupId>
+				<artifactId>maven-license-plugin</artifactId>
+				<version>${version.maven-license-plugin}</version>
+				<configuration>
+					<header>${file.license}</header>
+					<strictCheck>true</strictCheck>
+					<properties>
+						<year>${project.inceptionYear}</year>
+						<owner>${owner.name}</owner>
+						<email>${owner.email}</email>
+					</properties>
+					<encoding>${project.build.sourceEncoding}</encoding>
+					<excludes>
+						<exclude>**/etc/*</exclude>
+						<exclude>**/*.gitignore</exclude>
+						<exclude>**/README.md</exclude>
+					</excludes>
+				</configuration>
+			</plugin>
+			<!-- For javadoc -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-javadoc-plugin</artifactId>
+				<version>${version.maven-javadoc-plugin}</version>
+				<configuration>
+					<charset>${project.build.sourceEncoding}</charset>
+					<encoding>${project.build.sourceEncoding}</encoding>
+				</configuration>
+			</plugin>
+			<!-- For test coverage -->
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>cobertura-maven-plugin</artifactId>
+				<version>${version.cobertura-maven-plugin}</version>
+			</plugin>
 		</plugins>
 		<finalName>${finalName}-${project.version}</finalName>
 	</build>
