--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
 		<version.maven-javadoc-plugin>2.9</version.maven-javadoc-plugin>
 		<version.maven-license-plugin>1.9.0</version.maven-license-plugin>
 		<!-- Third Party dependencies -->
+		<version.poi-ooxml>3.7</version.poi-ooxml>
 		<!-- Logging -->
 		<version.commons-logging>1.1.1</version.commons-logging>
 		<!-- Test -->
@@ -61,6 +62,11 @@
 
 	<dependencies>
 		<!-- Third Party dependencies -->
+		<dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi-ooxml</artifactId>
+			<version>${version.poi-ooxml}</version>
+		</dependency>
 		<!-- Logging -->
 		<dependency>
 			<groupId>commons-logging</groupId>
@@ -141,8 +147,9 @@
 					<header>${file.license}</header>
 					<strictCheck>true</strictCheck>
 					<mapping>
-                        <txt>JAVADOC_STYLE</txt>
-                    </mapping>
+						<java>SLASHSTAR_STYLE</java>
+						<txt>SLASHSTAR_STYLE</txt>
+					</mapping>
 					<properties>
 						<year>${project.inceptionYear}</year>
 						<owner>${owner.name}</owner>
